codepkg/objects/Document__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmendmentRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amendment Request</label>
        <referenceTo>Amendment_Request__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application_Extension__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Extension</label>
        <referenceTo>Application_Extension__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>Date it was passed &amp; approved by the governing body</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date it was passed &amp; approved by the governing body</inlineHelpText>
        <label>Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CWMP_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CWMP Project</label>
        <referenceTo>CWMP_Project__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closeout_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closeout Request</label>
        <referenceTo>Closeout_Request__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closeout_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closeout Task</label>
        <referenceTo>Closeout_Task__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Comments or Description of the Document</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Comments or Description of the Document</inlineHelpText>
        <label>Comments</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date_Of_Fiscal_Year_End__c</fullName>
        <description>Date Of Fiscal Year End</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Of Fiscal Year End</inlineHelpText>
        <label>Date Of Fiscal Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Of_Signature__c</fullName>
        <description>Date Of Signature</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Date Of Signature</inlineHelpText>
        <label>Date Of Signature</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <description>The Date the document was received from FEMA.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Date the document was received from FEMA.</inlineHelpText>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Time_Uploaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Uploaded</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Uploaded__c</fullName>
        <description>The Date the document was uploaded into Salesforce.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Date the document was uploaded into Salesforce.</inlineHelpText>
        <label>Date Uploaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Creation_Method__c</fullName>
        <description>If the document is created from a Program document then Document Creation Method is System Generated or Manually Uploaded.</description>
        <label>Document Creation Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manually Uploaded</fullName>
                    <default>true</default>
                    <label>Manually Uploaded</label>
                </value>
                <value>
                    <fullName>System Generated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Format__c</fullName>
        <label>Document Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>.pdf</fullName>
                    <label>PDF</label>
                </value>
                <value>
                    <fullName>.docx</fullName>
                    <label>Word</label>
                </value>
                <value>
                    <fullName>.zip</fullName>
                    <label>ZIP</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <description>The Document&apos;s Name</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The Document&apos;s Name</inlineHelpText>
        <label>Document Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>The Document Type</description>
        <inlineHelpText>The Document Type</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Obligating</fullName>
                </value>
                <value>
                    <fullName>Compliance</fullName>
                </value>
                <value>
                    <fullName>De Obligation</fullName>
                </value>
                <value>
                    <fullName>Closeout</fullName>
                </value>
                <value>
                    <fullName>Withdrawn</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Request</fullName>
                </value>
                <value>
                    <fullName>Supplement</fullName>
                </value>
                <value>
                    <fullName>miscellaneous</fullName>
                    <label>Miscellaneous</label>
                </value>
                <value>
                    <fullName>FIR</fullName>
                </value>
                <value>
                    <fullName>Signed FIR</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>FGAS Report</fullName>
                </value>
                <value>
                    <fullName>Property Owner ID</fullName>
                </value>
                <value>
                    <fullName>Proof of Ownership</fullName>
                </value>
                <value>
                    <fullName>Proof of Rental</fullName>
                </value>
                <value>
                    <fullName>Home Assessment Report</fullName>
                </value>
                <value>
                    <fullName>Environmental Checklist</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Homeowner Paper Application</fullName>
                </value>
                <value>
                    <fullName>Homeowner Appeal Form</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Punch List</fullName>
                </value>
                <value>
                    <fullName>Invoices</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Requested</fullName>
                </value>
                <value>
                    <fullName>Reimbursement Received</fullName>
                </value>
                <value>
                    <fullName>Executed Tri-Party Agreement</fullName>
                </value>
                <value>
                    <fullName>BCA Technical Review Memo</fullName>
                    <isActive>false</isActive>
                    <label>BCA Technical Review Memo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExpirationDate__c</fullName>
        <description>Document Expiration Date</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Document Expiration Date</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <description>The Mail Log Number.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Mail Log Number for historical reference.</inlineHelpText>
        <label>External ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Document__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Global Document is used for All Projects related to Incident / SubRecipient</description>
        <label>Global Document</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HH_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to HH Application Object, in order to upload the Documents for Home Hardening Application.</description>
        <inlineHelpText>Lookup to HH Application Object, in order to upload the Documents for Home Hardening Application.</inlineHelpText>
        <label>HH Application</label>
        <referenceTo>HH_Application__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Subrecipient_Summary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup To &quot;Incident Sub Recipient Summary&quot; Object. Used to upload universal Document.</description>
        <inlineHelpText>Lookup To &quot;Incident Sub Recipient Summary&quot; Object.</inlineHelpText>
        <label>Incident Subrecipient Summary</label>
        <referenceTo>Incident_Subrecipient_Stage__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <label>Is Required</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Required</fullName>
                </value>
                <value>
                    <fullName>Optional</fullName>
                    <default>true</default>
                    <label>Optional</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Letter_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mail_Log_Number__c</fullName>
        <label>Mail Log Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>New File Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_File_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original File Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Request</label>
        <referenceTo>Payment_Request__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Project Name</description>
        <inlineHelpText>The Project Name</inlineHelpText>
        <label>Project Name</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Closeout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Closeout</label>
        <referenceTo>Project_Closeout__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Site</label>
        <referenceTo>Project_Site__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Uploaded</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>RFI</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Updated_Date__c</fullName>
        <description>A Date Stamp of When the status was last updated</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A Date Stamp of When the status was last updated</inlineHelpText>
        <label>Status Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The Document Stage</description>
        <inlineHelpText>The Document Stage</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Uploaded_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The User who uploaded the document</description>
        <inlineHelpText>The User who uploaded the document</inlineHelpText>
        <label>Uploaded By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Schedule</label>
        <referenceTo>Work_Schedule__c</referenceTo>
        <relationshipLabel>Documents</relationshipLabel>
        <relationshipName>Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Document</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>ProjectId__c</columns>
        <columns>Document_Name__c</columns>
        <columns>Closeout_Task__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Closeout_Task__c</field>
            <operation>contains</operation>
            <value>8</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DOC-{00000000}</displayFormat>
        <label>Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>HH_Document__c</fullName>
        <label>HH-Document</label>
    </sharingReasons>
    <validationRules>
        <fullName>Name_Format</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX(  Document_Name__c , &quot;[a-zA-Z0-9\\&amp;\\,\\:\\_\\-\\/\\.\\(\\)\\  ]+&quot;))</errorConditionFormula>
        <errorDisplayField>Document_Name__c</errorDisplayField>
        <errorMessage>You can use only  -&amp; / .: _, these special characters</errorMessage>
    </validationRules>
</CustomObject>